# btfm

./: .env  .gitignore  Cargo.toml  Containerfile  README.md
.cargo/: audit.toml
.github/workflows/: build-cli.yml  ci.yml  pull_requests.yml  release.yml
btfm/: Cargo.toml  btfm.toml.example  build.rs  pyproject.toml  sqlx-data.json
btfm-api-structs/: Cargo.toml  README.md
btfm-api-structs/src/: clip.rs  lib.rs  phrase.rs
btfm-cli/: Cargo.toml  README.md
btfm-cli/src/: main.rs
btfm-ui/: Cargo.toml  README.md  build.rs  org.jcline.btfm.json
btfm-ui/data/: org.jcline.btfm.appdata.xml  org.jcline.btfm.desktop  org.jcline.btfm.gschema.xml
btfm-ui/src/: application.rs  btfm-ui.gresource.xml  main.rs  window.rs  window.ui
btfm-ui/src/gtk/: org.jcline.btfm.gschema.xml
btfm/.sqlx/: query-2416a2737e0a7586eed679dbf2892cfd1666012f7285636da5bc8032bad5c561.json  query-299c8ab9ac8125b3906b4390d081e16e36f872ffd5ff75420f957b8d80d71e96.json  query-3b1eb33d62121408754d2e3889480172171adec16fb2b62483aeee21f5a57e08.json  query-419de6567817f44b37f6ec7daa9fedd987a6e1ab9b5fa063ca85b430d0cb4dce.json  query-71aabcf05dd6a272329b5b9f31b8e9c26a70d8688054f784e11ea04bc5ee81cb.json  query-778f14919ea4300a24aad0517ee66c62db1634dde2b536dfd390c470a6086473.json  query-7db698f947f7a3c7cb14dbcb95d091796f01d466bd661fb0fd285069a11558fb.json  query-8cc91c595445f2a8b86a0731f16447a5be7b9bdfcd0876673d35d3c03a8d0d27.json  query-b3bcae3dc1dcf847b6b9959ba54f64776609ea84885cd3c6b432a7e51bdae17f.json  query-cf964830e49f0ca093e3028b4bbc3c04c1583e4b703abe78778218951f354ccf.json  query-d9234be1c798e677795507012cb3125dd4bf5f1e9e9de6735ed2c4dfe9366a0e.json  query-ed9aabfa12aa815de63bc336abe7a2d61299263399401b8cbb04131a602e4b2b.json  query-f13d12041df8af0cebbfbf3ecde08d47f962a8112bbcaadad6383555ceed1168.json  query-f7f66715bdb1cbd0df6073382b2a199fdcc3dce323a95157e1677c566434ad3a.json
btfm/migrations/: 20210203032621_initial_database.sql
btfm/src/: cli.rs  config.rs  db.rs  decoder.rs  lib.rs  main.rs  mimic.rs  transcode.rs  transcribe.py  transcribe.rs
btfm/src/db/: clip.rs  mod.rs  phrase.rs
btfm/src/discord/: mod.rs  text.rs  voice.rs
btfm/src/transcribe/: deepgram.rs  mod.rs  whisper.rs
btfm/src/web/: handlers.rs  mod.rs  serialization.rs
btfm/src/web/api/: clip.rs  mod.rs
btfm/src/web/handlers/: clip.rs  mod.rs  phrase.rs  status.rs
btfm/test_data/: discord.opus
devel/: Dockerfile  build.sh  cargo.sh  test.sh
devel/ansible/: btfm.yml
devel/ansible/roles/btfm/defaults/: main.yml
devel/ansible/roles/btfm/handlers/: main.yml
devel/ansible/roles/btfm/tasks/: main.yml
devel/ansible/roles/btfm/templates/: btfm.service
migrations/: 20210203032621_create_clips.sql  20210203032621_initial_database.sql  20210203032631_create_phrases.sql
migrations/2020-04-24-035641_create_clips/: down.sql  up.sql
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs  transcode.rs  voice.rs
src/discord/: mod.rs  text.rs  voice.rs
src/transcribe/: deepgram.rs  deepspeech.rs  deepspeech_cpu.rs  deepspeech_gpu.rs  mod.rs
src/transcriber/: mod.rs
src/web/: handlers.rs  mod.rs  serialization.rs
whisper-server/: Cargo.toml  requirements.txt
whisper-server/src/: error.rs  main.rs  transcribe.py
