[package]
name = "btfm"
version = "0.13.0"
authors = ["Jeremy Cline", "Randy Barlow", "Brotivator"]
edition = "2018"
description = "A Discord bot that plays audio clips based on voice chat"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/btfm/"
readme = "README.md"
repository = "https://github.com/jeremycline/btfm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = "2"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
httparse = "1"
toml = "0.5"
serde = { "version" = "1", features = ["derive"] }
serde_json = "1"
tokio = { "version" = "1" }
tokio-tungstenite = { "version" = "0.15", features = ["rustls-tls"], "optional" = true }
tokio-stream = "0.1"
deepspeech = { "version" = "0.9", "optional" = true }
structopt = "0.3"
log = "0.4"
stderrlog = "0.5"
chrono = "0.4"
rand = "0.8"
reqwest = { "version" = "0.11", features = ["json"] }
songbird = {"version" = "0.2.0", features=["default", "builtin-queue"]}
byteorder = "1"
thiserror = "1.0"
sqlx = {"version" = "0.5", features=["runtime-tokio-rustls", "postgres", "chrono", "migrate", "macros"]}
hound = "3"
url = "2"

[dependencies.audrey]
features = ["wav"]
version = "0.3"

[dependencies.serenity]
version = "0.10"
features = ["cache", "framework", "gateway", "standard_framework", "http", "rustls_backend", "voice", "utils"]

[features]
default = ["deepspeech-recognition", "deepgram-recognition"]
deepspeech-recognition = ["deepspeech"]
deepgram-recognition = ["tokio-tungstenite"]

[profile.release]
lto = true
codegen-units = 1
