[package]
name = "btfm"
version = "0.13.0"
authors = ["Jeremy Cline", "Randy Barlow", "Brotivator"]
edition = "2018"
description = "A Discord bot that plays audio clips based on voice chat"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/btfm/"
readme = "README.md"
repository = "https://github.com/jeremycline/btfm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
audrey = { "version" = "0.3", features=["wav"]}
byteorder = "1"
clap = "2"
chrono = "0.4"
deepspeech = { "version" = "0.9" }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
hound = "3"
httparse = "1"
log = "0.4"
rand = "0.8"
reqwest = { "version" = "0.11", features = ["json"] }
serde = { "version" = "1", features = ["derive"] }
serde_json = "1"
serenity = {"version" = "0.10", features=["cache", "framework", "gateway", "standard_framework", "http", "rustls_backend", "voice", "utils"] }
structopt = "0.3"
stderrlog = "0.5"
songbird = {"version" = "0.2.0", features=["default", "builtin-queue"]}
sqlx = {"version" = "0.5", features=["runtime-tokio-rustls", "postgres", "chrono", "migrate", "macros"]}
thiserror = "1.0"
tokio = { "version" = "1" }
tokio-tungstenite = { "version" = "0.15", features = ["rustls-tls"] }
tokio-stream = "0.1"
toml = "0.5"
url = "2"

[profile.release]
lto = true
codegen-units = 1
