[package]
name = "btfm-api-structs"
version = "0.3.1"
edition = "2021"
description = "Structures used in BTFM's HTTP API."
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/jeremycline/btfm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1.3.3"
features = ["serde"]
