[package]
name = "btfm-cli"
version = "0.1.0"
edition = "2021"
description = "A command-line interface to manage the BTFM Discord bot."
license = "GPL-2.0-or-later"
repository = "https://github.com/jeremycline/btfm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
serde_json = "1"
structopt = "0.3"
thiserror = "1"
url = "2"

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart", "stream"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "rt"]

[dependencies.tokio-util]
version = "0.6"
features = ["codec"]

[dependencies.ulid]
version = "0.5"
features = ["serde"]