[package]
name = "btfm-cli"
version = "0.4.0"
edition = "2021"
description = "A command-line interface to manage the BTFM Discord bot."
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/jeremycline/btfm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde_json = "1"
thiserror = "1"
url = "2"

[dependencies.btfm-api-structs]
path = "../btfm-api-structs"
version = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "3.2"
features = ["derive", "cargo", "env", "unicode", "wrap_help"]

[dependencies.prettytable-rs]
version = "0.8"
features = ["win_crlf"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart", "stream"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "rt", "macros"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.ulid]
version = "1.0.0"
features = ["serde"]
