# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "btfm"
version = "0.21.2"
edition = "2021"
description = "A Discord bot that plays audio clips based on voice chat"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/btfm/"
readme = "../README.md"
repository = "https://github.com/jeremycline/btfm/"

[dependencies]
bytes = "1.5.0"

[dependencies.anyhow]
version = "1.0.75"
features = ["backtrace"]

[dependencies.axum]
version = "0.6.20"
features = ["headers", "http1", "json", "multipart", "tower-log"]

[dependencies.axum-server]
version = "0.5"
features = ["tls-rustls"]

[dependencies.btfm-api-structs]
path = "../btfm-api-structs"
version = "0.3"

[dependencies.cached]
version = "0.46"
features = ["async_tokio_rt_multi_thread"]

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "env", "unicode", "wrap_help"]

[dependencies.chrono]
version = "0.4"

[dependencies.futures]
version = "0.3"

[dependencies.futures-channel]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.gstreamer]
version = "0.21"
features = ["v1_18"]

[dependencies.gstreamer-app]
version = "0.21"
features = ["v1_18"]

[dependencies.gstreamer-audio]
version = "0.21"
features = ["v1_18"]

[dependencies.hex]
version = "0.4.3"
features = ["serde"]

[dependencies.http]
version = "0.2"

[dependencies.httparse]
version = "1"

[dependencies.hyper]
version = "0.14"
features=["full"]

[dependencies.lazy_static]
version = "1.4"

[dependencies.numpy]
version = "0.20"

[dependencies.once_cell]
version = "1"

[dependencies.pyo3]
version = "0.20"
features = ["auto-initialize"]

[dependencies.regex]
version = "1.9.6"

[dependencies.rand]
version = "0.8"

[dependencies.reqwest]
version = "0.11"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.serenity]
version = "0.12.0-rc"
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "rustls_backend", "utils", "voice", "tokio_task_builder"]

[dependencies.sha2]
version = "0.10.8"

[dependencies.songbird]
version = "0.4.0-rc"
features=["builtin-queue", "driver", "gateway", "serenity", "native", "receive"]

[dependencies.sqlx]
version = "0.7.2"
features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros", "uuid"]

[dependencies.thesaurus]
version = "0.5.2"
features = ["wordnet"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features=["env-filter"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1"
features=["full"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.tokio-util]
version = "0.7"

[dependencies.toml]
version = "0.8"

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.4.4"
features = ["trace", "request-id", "util", "add-extension", "auth", "compression-full", "sensitive-headers"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["serde"]


[[bin]]
name = "btfm-server"
