# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "btfm"
version = "0.21.2"
edition = "2021"
description = "A Discord bot that plays audio clips based on voice chat"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/btfm/"
readme = "../README.md"
repository = "https://github.com/jeremycline/btfm/"

[dependencies]
bytes = "1.6.0"
byteorder = "1.5.0"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
candle-nn = "0.4.1"
cudarc = { version = "0.10.0", features = ["f16"], optional = true }
half = { version = "2.4.0", features = ["num-traits", "use-intrinsics", "rand_distr"], optional = true }
tokenizers = { version = "0.15", default-features = false, features = ["onig"]}

[dependencies.anyhow]
version = "1.0.81"
features = ["backtrace"]

[dependencies.axum]
version = "0.7"
features = ["multipart"]

[dependencies.axum-server]
version = "0.6"
default-features = false
features = ["tls-openssl"]

[dependencies.btfm-api-structs]
path = "../btfm-api-structs"
version = "0.3"

[dependencies.cached]
version = "0.49"
features = ["async_tokio_rt_multi_thread"]

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "env", "unicode", "wrap_help"]

[dependencies.chrono]
version = "0.4"

[dependencies.futures]
version = "0.3"

[dependencies.futures-channel]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.gstreamer]
version = "0.22"
features = ["v1_18"]

[dependencies.gstreamer-app]
version = "0.22"
features = ["v1_18"]

[dependencies.gstreamer-audio]
version = "0.22"
features = ["v1_18"]

[dependencies.hex]
version = "0.4.3"
features = ["serde"]

[dependencies.http]
version = "1"

[dependencies.httparse]
version = "1"

[dependencies.hyper]
version = "1"
features=["full"]

[dependencies.lazy_static]
version = "1.4"

[dependencies.numpy]
version = "0.21"

[dependencies.once_cell]
version = "1"

[dependencies.pyo3]
version = "0.21"
features = ["auto-initialize"]

[dependencies.regex]
version = "1.10.4"

[dependencies.rand]
version = "0.8"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "native-tls", "gzip", "deflate", "multipart", "stream"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.serenity]
version = "0.12.1"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "framework",
    "gateway",
    "model",
    "http",
    "standard_framework",
    "native_tls_backend",
    "utils",
    "voice",
    "tokio_task_builder"
]

[dependencies.sha2]
version = "0.10.8"

[dependencies.songbird]
version = "0.4.1"
default-features = false
features=["builtin-queue", "driver", "gateway", "serenity", "native", "receive"]

[dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros", "uuid"]

[dependencies.symphonia]
version = "0.5"
features = ["all"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features=["env-filter"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1"
features=["full"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.tokio-util]
version = "0.7"

[dependencies.toml]
version = "0.8"

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.5"
features = ["trace", "request-id", "util", "add-extension", "auth", "compression-full", "sensitive-headers"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.uuid]
version = "1.8.0"
features = ["serde"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }
reqwest = { version = "0.12", features = ["blocking", "native-tls", "gzip"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda", "dep:cudarc"]
cudnn = ["candle-core/cudnn"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]

[[bin]]
name = "btfm-server"
