[package]
name = "whisper-server"
version = "0.1.0"
edition = "2021"
description = "An HTTP server to handle STT via Whisper"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/btfm/"
readme = "../README.md"
repository = "https://github.com/jeremycline/btfm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.axum]
version = "0.6.6"
features = ["headers", "http1", "json", "multipart", "tower-log", "ws"]

[dependencies.axum-server]
version = "0.4.5"
features = ["tls-rustls"]

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "env", "unicode", "wrap_help"]

[dependencies.futures]
version = "0.3"

[dependencies.futures-channel]
version = "0.3"

[dependencies.futures-util]
version = "0.3"
[dependencies.http]
version = "0.2"

[dependencies.httparse]
version = "1"

[dependencies.hyper]
version = "0.14"
features=["full"]

[dependencies.numpy]
version = "0.17"

[dependencies.pyo3]
version = "0.17.3"
features = ["anyhow", "auto-initialize", "hashbrown", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.tempfile]
version = "3"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features=["env-filter"]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1"
features=["full"]

[dependencies.tokio-tungstenite]
version = "0.18"
features = ["rustls"]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.toml]
version = "0.7"

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.3.5"
features = ["trace", "request-id", "util", "add-extension", "auth", "compression-full", "sensitive-headers"]

[dependencies.url]
version = "2"
features = ["serde"]
